--- a/whiteboard.html
+++ b/whiteboard.html
@@ -1,128 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Valiant Vision Whiteboard</title>
+
+<!-- Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&family=Lora:wght@400;700&display=swap" rel="stylesheet">
+
 <style>
-  /* Full-screen blurred background matching main theme */
-  body, html {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    font-family: 'Montserrat', sans-serif;
-    background: linear-gradient(135deg, #6a11cb, #2575fc); /* Example main theme gradient */
-  }
+:root{
+    --vv-green:#76b900;  
+    --vv-purple:#4300b9;  
+    --vv-dark:#141316;
+    --vv-text:#2c2c2c;
+    --vv-muted:#6b6b6b;
+    --vv-bg:#f4f4f7;
+    --shadow:0 10px 30px rgba(0,0,0,.08);
+}
+*{box-sizing:border-box;}
+html,body{margin:0; padding:0; width:100%; height:100%;}
+body{
+    font-family:'Lora', serif;
+    color:var(--vv-text);
+    background:linear-gradient(135deg,var(--vv-green),var(--vv-purple));
+    overflow:hidden;
+}
 
-  #blur-bg {
-    position: absolute;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    backdrop-filter: blur(10px);
-    z-index: 0;
-  }
+/* Whiteboard container */
+#whiteboard-container{
+  width:100%; height:100%;
+  position:relative;
+  background: rgba(255,255,255,0.15);
+  backdrop-filter: blur(10px) saturate(120%);
+  display:flex; justify-content:center; align-items:center;
+  flex-direction:column;
+}
 
-  #whiteboard {
-    position: absolute;
-    top: 50%; left: 50%;
-    transform: translate(-50%, -50%);
-    width: 90%; height: 80%;
-    background: rgba(255,255,255,0.1);
-    border-radius: 20px;
-    box-shadow: 0 0 30px rgba(0,0,0,0.3);
-    cursor: crosshair;
-    z-index: 1;
-  }
+#whiteboard {
+  width:90%; max-width:1200px;
+  height:80%; max-height:700px;
+  background: rgba(255,255,255,0.9);
+  border-radius:24px;
+  box-shadow:0 12px 30px rgba(0,0,0,0.3);
+  position:relative;
+  overflow:hidden;
+}
 
-  canvas {
-    width: 100%;
-    height: 100%;
-    display: block;
-    border-radius: 20px;
-  }
+#whiteboard canvas{
+  width:100%; height:100%;
+  display:block;
+  border-radius:24px;
+  background:transparent;
+}
+
+/* Buttons */
+#wButtons{
+  position:absolute; top:12px; left:12px; z-index:100;
+}
+#wButtons button{
+  margin-right:8px;
+  padding:10px 16px;
+  border:none;
+  border-radius:12px;
+  font-weight:600;
+  font-family:'Montserrat',sans-serif;
+  cursor:pointer;
+  color:#fff;
+  background:linear-gradient(135deg,var(--vv-purple),var(--vv-green));
+  box-shadow:0 6px 18px rgba(67,0,185,0.25);
+  transition:0.2s;
+}
+#wButtons button:hover{opacity:0.9;}
 </style>
 </head>
 <body>
-<div id="blur-bg"></div>
-<div id="whiteboard">
-  <canvas id="canvas"></canvas>
+
+<div id="whiteboard-container">
+  <div id="whiteboard">
+    <div id="wButtons">
+      <button id="closeWhiteboard">Close</button>
+      <button id="clearWhiteboard">Clear</button>
+      <button id="saveWhiteboard">Save</button>
+    </div>
+    <canvas id="wbCanvas"></canvas>
+  </div>
 </div>
 
 <script>
-  const canvas = document.getElementById('canvas');
-  const ctx = canvas.getContext('2d');
+// Canvas setup
+const canvas = document.getElementById('wbCanvas');
+const ctx = canvas.getContext('2d');
 
-  // Resize canvas to match container
-  function resizeCanvas() {
+function resizeCanvas(){
     canvas.width = canvas.offsetWidth;
     canvas.height = canvas.offsetHeight;
-  }
-  window.addEventListener('resize', resizeCanvas);
-  resizeCanvas();
+}
+window.addEventListener('resize', resizeCanvas);
+resizeCanvas();
 
-  // Drawing state
-  let drawing = false;
-  let lastX = 0;
-  let lastY = 0;
+// Drawing
+let drawing=false;
+let lastX=0, lastY=0;
 
-  // Start drawing
-  canvas.addEventListener('mousedown', (e) => {
-    drawing = true;
-    [lastX, lastY] = [e.offsetX, e.offsetY];
-  });
+canvas.addEventListener('mousedown', e=>{
+    drawing=true;
+    [lastX,lastY] = [e.offsetX,e.offsetY];
+});
+canvas.addEventListener('mouseup', ()=>drawing=false);
+canvas.addEventListener('mouseout', ()=>drawing=false);
+canvas.addEventListener('mousemove', e=>{
+    if(!drawing) return;
+    ctx.strokeStyle='#4300b9';
+    ctx.lineWidth=3;
+    ctx.lineJoin='round';
+    ctx.lineCap='round';
+    ctx.beginPath();
+    ctx.moveTo(lastX,lastY);
+    ctx.lineTo(e.offsetX,e.offsetY);
+    ctx.stroke();
+    [lastX,lastY] = [e.offsetX,e.offsetY];
+});
 
-  canvas.addEventListener('mousemove', draw);
-  canvas.addEventListener('mouseup', () => drawing = false);
-  canvas.addEventListener('mouseout', () => drawing = false);
-
-  // Touch support
-  canvas.addEventListener('touchstart', (e) => {
+// Touch support
+canvas.addEventListener('touchstart', e=>{
     e.preventDefault();
-    drawing = true;
+    drawing=true;
     const touch = e.touches[0];
     const rect = canvas.getBoundingClientRect();
     lastX = touch.clientX - rect.left;
     lastY = touch.clientY - rect.top;
-  });
-
-  canvas.addEventListener('touchmove', (e) => {
+});
+canvas.addEventListener('touchmove', e=>{
     e.preventDefault();
-    if (!drawing) return;
+    if(!drawing) return;
     const touch = e.touches[0];
     const rect = canvas.getBoundingClientRect();
-    drawLine(touch.clientX - rect.left, touch.clientY - rect.top);
-  });
-
-  canvas.addEventListener('touchend', () => drawing = false);
-
-  // Draw line function
-  function draw(e) {
-    if (!drawing) return;
-    drawLine(e.offsetX, e.offsetY);
-  }
-
-  function drawLine(x, y) {
-    ctx.strokeStyle = '#ffffff'; // White pen
-    ctx.lineWidth = 3;
-    ctx.lineJoin = 'round';
-    ctx.lineCap = 'round';
-
+    ctx.strokeStyle='#4300b9';
+    ctx.lineWidth=3;
+    ctx.lineJoin='round';
+    ctx.lineCap='round';
     ctx.beginPath();
-    ctx.moveTo(lastX, lastY);
-    ctx.lineTo(x, y);
+    ctx.moveTo(lastX,lastY);
+    ctx.lineTo(touch.clientX - rect.left, touch.clientY - rect.top);
     ctx.stroke();
+    lastX = touch.clientX - rect.left;
+    lastY = touch.clientY - rect.top;
+});
+canvas.addEventListener('touchend', ()=>drawing=false);
 
-    [lastX, lastY] = [x, y];
-  }
+// Buttons
+document.getElementById('clearWhiteboard').addEventListener('click', ()=>{
+    ctx.clearRect(0,0,canvas.width,canvas.height);
+});
 
-  // Clear canvas when clicking outside whiteboard
-  document.addEventListener('click', (e) => {
-    if (!document.getElementById('whiteboard').contains(e.target)) {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-    }
-  });
+document.getElementById('saveWhiteboard').addEventListener('click', ()=>{
+    const link = document.createElement('a');
+    link.download='whiteboard.png';
+    link.href = canvas.toDataURL();
+    link.click();
+});
+
+document.getElementById('closeWhiteboard').addEventListener('click', ()=>{
+    window.location.href='index.html'; // Redirect to main page
+});
 </script>
+
 </body>
 </html>
